--- a/BlazorAppWithXmind/Pages/Counter.razor
+++ b/BlazorAppWithXmind/Pages/Counter.razor
@@ -13,9 +13,12 @@
 @code {
     private int currentCount = 0;
 
+    [Parameter]
+    public int IncrementAmount { get; set; } = 1;
+
     private void IncrementCount()
     {
-        currentCount++;
+        currentCount += IncrementAmount;
     }
 
     private void DecreaseCount()
